--- a/src/components/global-layout.module.css
+++ b/src/components/global-layout.module.css
@@ -1,4 +1,4 @@
-/*----------- LAYOUT ---------*/
+/*----------- LAYOUT ------------*/
 .wrapper {
   max-width: 800px;
   padding: 0 20px;
@@ -12,7 +12,7 @@
   flex: 1;
 }
 
-/*----------- HEADER ---------*/
+/*----------- HEADER ------------*/
 .header {
   padding: 20px 0;
 }
@@ -23,14 +23,13 @@
   font-weight: 700;
 }
 
-
-/*----------- FOOTER ---------*/
+/*----------- FOOTER ------------*/
 .footer {
   text-align: center;
   padding: 20px 0;
 }
 
-/*----------- ERROR ---------*/
+/*----------- ERROR ------------*/
 .error_section {
   display: flex;
   flex-direction: column;
@@ -51,4 +50,17 @@
 
 .error_section a:hover {
   color: gray;
+}
+
+/*----------- Screen Reader Only -----------*/
+.visually_hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
