[Day5] UI 레이아웃 완성

--- a/src/components/layout/global-layout.module.css
+++ b/src/components/layout/global-layout.module.css
@@ -68,3 +68,13 @@
   white-space: nowrap;
   border-width: 0;
 }
+
+/*----------- EMPTY -----------*/
+.empty {
+  font-size: 1.375rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  min-height: 300px;
+}
